--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -141,3 +141,24 @@
         @apply bg-background text-foreground;
     }
 }
+
+* {
+    /* margin: 0;
+    padding: 0; */
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+    scroll-behavior: smooth;
+}
+
+:root {
+    --primary-color: rgba(0, 104, 200, 1);
+    --secondary-color: rgba(221, 40, 49, 1);
+    --black: #000;
+    --white: #fff;
+    --yellow: #ffc904;
+
+    --transition-regular: 0.3s;
+    --transition-slow: 0.6s;
+
+}
