--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -62,6 +62,16 @@
 }
 
 :root {
+
+    --primary-color: rgba(0, 104, 200, 1);
+    --secondary-color: rgba(221, 40, 49, 1);
+    --black: #000;
+    --white: #fff;
+    --yellow: #ffc904;
+
+    --transition-regular: 0.3s;
+    --transition-slow: 0.6s;
+
     --background: oklch(1 0 0);
     --foreground: oklch(0.145 0 0);
     --card: oklch(1 0 0);
@@ -151,14 +161,180 @@
     scroll-behavior: smooth;
 }
 
-:root {
-    --primary-color: rgba(0, 104, 200, 1);
-    --secondary-color: rgba(221, 40, 49, 1);
-    --black: #000;
-    --white: #fff;
-    --yellow: #ffc904;
+.logo {
+    width: 100px;
+    height: 65px;
+}
 
-    --transition-regular: 0.3s;
-    --transition-slow: 0.6s;
+/* Hero */
 
+.bg-element {
+    position: relative;
+}
+
+.bg-element:after {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 300px;
+    height: 200px;
+    background-color: var(--yellow);
+    filter: blur(250px);
+}
+
+.bg-element:before {
+    content: '';
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    width: 300px;
+    height: 200px;
+    background-color: var(--yellow);
+    filter: blur(250px);
+}
+
+.hero-bg {
+    height: 100vh;
+    width: 100%;
+    background-image: url('/resources/js/assets/hero-banner.jpg');
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    overflow: hidden;
+    z-index: 1;
+}
+
+.hero-image img {
+    width: 100%;
+    height: 100%;
+}
+
+.hero-content h1 {
+    opacity: 0;
+    animation: Anim-fade-bottom var(--transition-regular) 0.6s forwards linear;
+}
+
+.hero-content h5 {
+    opacity: 0;
+    animation: Anim-fade-bottom var(--transition-regular) 0.9s forwards linear;
+}
+
+.hero-content .hero-span {
+    opacity: 0;
+    animation: Anim-fade-bottom var(--transition-regular) 1.1s forwards linear;
+}
+
+.hero-content button {
+    opacity: 0;
+    animation: Anim-fade-bottom var(--transition-regular) 1.2s forwards linear;
+}
+
+.hero-image {
+    opacity: 0;
+    animation: Anim-fade-bottom var(--transition-regular) 1.5s forwards linear;
+}
+
+@keyframes Anim-fade-bottom {
+    0% {
+        opacity: 0;
+        transform: translateY(50px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
+
+
+/* Hero MQ Section */
+
+@media (max-width: 1399px) {
+    .hero-content h1 {
+        font-size: 6rem;
+    }
+}
+
+@media (max-width: 1199px) {
+    .middle-nav {
+        flex-wrap: wrap;
+    }
+
+    .get-help {
+        width: 100%;
+        justify-content: start;
+    }
+
+    .nav-menu {
+        width: 60%;
+    }
+}
+
+@media (max-width: 991px) {
+    .middle-nav {
+        flex-direction: column;
+        justify-content: start;
+        align-items: start;
+        width: 100%;
+    }
+
+    .product-search {
+        width: 100%;
+    }
+
+    .hide {
+        display: none !important;
+    }
+
+    .hero-content {
+        width: 100%;
+    }
+}
+
+@media (max-width: 767px) {
+    .hide {
+        display: none !important;
+    }
+}
+
+@media (max-width: 575px) {
+    .hide {
+        display: none !important;
+    }
+
+    .product-search select {
+        width: 50%;
+    }
+
+    .nav-menu li a {
+        font-size: 1rem;
+    }
+
+    .top-nav {
+        flex-direction: column;
+    }
+
+    .top-nav {
+        align-items: start;
+        justify-content: start;
+        text-align: start;
+    }
+
+    .top-nav ul {
+        width: 100%;
+        justify-content: start;
+    }
+
+    .top-nav ul {
+        margin-top: 20px;
+    }
+}
+
+/* Banner */
+
+@media (max-width: 576px) {
+    .banner-1 {
+        background-size: 800%;
+        background-repeat: no-repeat;
+    }
 }
